--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ roomVersion = "2.8.3"
 coreKtxVersion = "1.7.0"
 ui = "1.9.4"
 benchmarkTraceprocessorJvm = "1.4.1"
+media3Exoplayer = "1.8.0"
 
 
 
@@ -45,7 +46,7 @@ robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectr
 core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "coreKtxVersion" }
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "ui" }
 androidx-benchmark-traceprocessor-jvm = { group = "androidx.benchmark", name = "benchmark-traceprocessor-jvm", version.ref = "benchmarkTraceprocessorJvm" }
-
+androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3Exoplayer" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
